# Pokemon-FireRed-Room-Randomizer

./: .env.example  .gitignore  Pipfile  README.md  backup_rooms.py  connec_node.py  main.py  map_omits.py  map_state.py  poke_randomizer.py  pyproject.toml  rando_utils.py  requirements.txt  room_node.py  rooms.py  setup.cfg  setup.py  warp_node.py
src/pokeFR_room_rando/: connec_node.py  map_node.py  map_state.py  node_id.py  node_manager.py  poke_randomizer.py  rando_map.py  rando_utils.py  room_node.py  rooms.py  transition_node.py  warp_node.py
src/pokeFR_room_rando.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pokeFR_room_randomizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
