[metadata]
name = pokeFR_room_randomizer
description = randomizes the internal connections between doorways to alter map layout, while retaining logic and playability.
author = Kameron Scott

[options]
packages =
    pokeFR_room_rando
install_requires =
    treelib>=1.6.0
python_requires = >=3.7.0
package_dir =
    =src